@@ -37,6 +37,7 @@ Version 1.4.6 - CVS
   - Fixed address book file and database backend error messages broken by
     CVE-2005-1769 patches.
   - Fixed compose form redirection in spamcop plugin.
+  - Reenabled Estonian translation. Thanks to Tanel Kindsigo.
   - "Toggle all" pointless when folder list empty (#1267079).
   - Readded options_identity_process and options_identity_renumber hooks
     broken by CVE-2005-2095 fixes.
@@ -65,6 +66,10 @@ Version 1.4.6 - CVS
   - Undefined variable in view_header.
   - Undefined index offset in read_body when trying to calculate next/prev
     links for attached messages.
+  - Fixed wrapping (#1043576) and encoding (#1246305) of multibyte
+    charsets. Fix requires PHP with mbstring support. If mbstring support
+    is not present or character set is not supported by mbstring
+    extension, fixes are not applied.
 
 Version 1.4.5 - 13 July 2005
 ----------------------------
@@ -643,7 +648,6 @@ Version 1.3.0
     E. Randall.
   - Moved the generic_header hook back to page_header.php. bug #554278
   - Make default theme work. Bug #557313, thanks Tyler Bannister.
-  - Reenabled Estonian translation. Thanks to Tanel Kindsigo.
 
 Version 1.2.7 -- June 21 2002
 -----------------------------
